test/sema/initializer-autogenerated-no-arguments.delta.output
initializer-autogenerated-no-arguments.delta:5:13: error: too few arguments to 'S', expected 2
    var s = S();
            ^
